[project]
name = "keiba-axis-model"
version = "0.1.0"
description = "Horse racing axis horse prediction with time-series ensemble models"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2.10",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "vulture>=2.15",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
